--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
     <div class="mainbar">
         <h1><a href="index.html">Project Manager</a></h1>
             <a href="http://gw.saraminhr.co.kr/app/home" target="_blank">
-            <img src="https://saraminhr.co.kr/resources/image/sub/group_03.png" height="50"></a>
+                <img src="https://saraminhr.co.kr/resources/image/sub/group_03.png" height="50">
+            </a>
     </div>
 
     <div class="impot">
         <ul class="menubar" width="200" height="500">
             <li class="PJlist">
                 <a href="pjlist.html">PJ 목록</a></li>
-            <li clss="planer" width=200px><a href="planer.html">계획서</a></li>
-            <li class="form" width=200px><a href="form.html">자주쓰는 양식</a></li>
-            <li class="data" width=200px>PJ 자료(나중에)</li>
-            <li class="alba" width=200px>외부위원 관리</li>
+            <li clss="planer"><a href="planer.html">계획서</a></li>
+            <li class="form"><a href="form.html">자주쓰는 양식</a></li>
+            <li class="data">PJ 자료(나중에)</li>
+            <li class="alba">외부위원 관리</li>
         </ul>
-        <iframe class="youtu" width="400px" height="300px"src="https://www.youtube.com/embed/coNBCuBwyRc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="youtu" width="300px" height="300px"src="https://www.youtube.com/embed/coNBCuBwyRc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+
+        </iframe>
     </div>
 </body>
 </html>
