--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cuns.css">
     <title>프로젝트 매니저</title>
+    <script src="cunsul.js"></script>
 </head>
 <body>
     <div class="mainbar">
@@ -25,8 +26,8 @@
             <li class="alba">외부위원 관리</li>
         </ul>
         <iframe id="youtu" width="300px" height="300px"src="https://www.youtube.com/embed/coNBCuBwyRc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-
         </iframe>
     </div>
+    <input type="button" value = "버튼" onclick = "disp()">
 </body>
 </html>
