--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
         <ul class="menubar">
             <li class="PJlist"><a href="pjlist.html">PJ 목록</a></li>
             <li clss="planer"><a href="planer.html">계획서</a></li>
-            <li class="form"><a href="form.html">자주쓰는 양식</a></li>
+            <li class="form"><a href="form.html">기안요청</a></li>
             <li class="data">PJ 자료(나중에)</li>
             <li class="alba">외부위원 관리!</li>
         </ul>
